// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre <GifExpertApp /> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <div>
    <GifGrid
      category="Rick and Morty"
      key="Rick and Morty"
    />
    <GifGrid
      category="Regular Show"
      key="Regular Show"
    />
  </div>
</Fragment>
`;

exports[`Pruebas sobre <GifExpertApp /> Debe de mostrarse correctamente  1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <div />
</Fragment>
`;
